--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <html>
 <head>
 <title>Architecture Tutoring Website</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Architecture Tutoring Website</h1>
