--- a/templates/about.html
+++ b/templates/about.html
@@ -4,15 +4,18 @@
 <html>
 <head>
 <title>About</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>About</h1>
-<p>This website is designed to help users learn about architecture, find tutors, and schedule lessons.</p>
-<p>We believe that everyone has the potential to learn about architecture, and we are committed to providing the resources necessary to make that happen.</p>
-<p>Our tutors are experienced professionals who are passionate about architecture and teaching.</p>
-<p>We offer a variety of lessons that are tailored to meet the needs of our students.</p>
-<p>We are confident that you will find our website to be a valuable resource for learning about architecture.</p>
-<a href="/">Home</a>
+<p>This website was created by two architecture students who are passionate about helping others learn about the field. We believe that everyone has the potential to be an architect, and we want to provide the resources necessary to make that happen.</p>
+<p>We offer a variety of resources on this website, including:</p>
+<ul>
+<li>Articles about architecture</li>
+<li>A list of tutors who can help you with your studies</li>
+<li>A scheduling tool to help you book lessons with tutors</li>
+</ul>
+<p>We hope that you find this website helpful. If you have any questions, please don't hesitate to contact us.</p>
 </body>
 </html>
 
