--- a/templates/lessons.html
+++ b/templates/lessons.html
@@ -4,15 +4,37 @@
 <html>
 <head>
 <title>Lessons</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Lessons</h1>
-<ul>
-<li>Introduction to Architecture</li>
-<li>History of Architecture</li>
-<li>Architectural Design</li>
-</ul>
-<a href="/">Home</a>
+<p>To schedule a lesson with a tutor, please fill out the following form.</p>
+<form action="/lessons" method="post">
+<label for="name">Name:</label>
+<input type="text" name="name">
+<br>
+<label for="email">Email:</label>
+<input type="email" name="email">
+<br>
+<label for="phone">Phone:</label>
+<input type="tel" name="phone">
+<br>
+<label for="subject">Subject:</label>
+<select name="subject">
+<option value="architecture">Architecture</option>
+<option value="engineering">Engineering</option>
+<option value="math">Math</option>
+<option value="science">Science</option>
+</select>
+<br>
+<label for="date">Date:</label>
+<input type="date" name="date">
+<br>
+<label for="time">Time:</label>
+<input type="time" name="time">
+<br>
+<input type="submit" value="Submit">
+</form>
 </body>
 </html>
 
