--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,13 +4,23 @@
 <html>
 <head>
 <title>Contact</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Contact</h1>
-<p>If you have any questions or concerns, please feel free to contact us.</p>
-<p>Email: info@architecture-tutoring-website.com</p>
-<p>Phone: 1-800-555-1212</p>
-<a href="/">Home</a>
+<p>If you have any questions, please don't hesitate to contact us.</p>
+<form action="/contact" method="post">
+<label for="name">Name:</label>
+<input type="text" name="name">
+<br>
+<label for="email">Email:</label>
+<input type="email" name="email">
+<br>
+<label for="message">Message:</label>
+<textarea name="message"></textarea>
+<br>
+<input type="submit" value="Submit">
+</form>
 </body>
 </html>
 
